[package]
name = "example-tonic"
version = "0.1.0"
edition = "2018"

[dependencies]
poem = { path = "../../", features = ["tower-compat"] }
tokio = { version = "1.10.0", features = ["rt-multi-thread", "macros"] }
prost = "0.8.0"
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"

[[bin]]
name = "example-tonic-client"
path = "src/client.rs"
