[package]
name = "example-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
poem = { path = "../../poem" }
poem-wasmhandler = { path = "../../poem-wasmhandler" }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
