[package]
name = "example-grpc-middleware"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
poem = { path = "../../../poem" }
poem-grpc = { path = "../../../poem-grpc" }
prost = "0.11.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
poem-grpc-build = { path = "../../../poem-grpc-build" }

[[bin]]
name = "grpc-middleware-client"
path = "src/client.rs"
