[package]
name = "example-grpc-middleware"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poem = { path = "../../../poem" }
poem-grpc = { path = "../../../poem-grpc" }
prost.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[build-dependencies]
poem-grpc-build = { path = "../../../poem-grpc-build" }

[[bin]]
name = "grpc-middleware-client"
path = "src/client.rs"
