[package]
name = "example-grpc-reflection"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
poem.workspace = true
poem-grpc.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true

[build-dependencies]
poem-grpc-build.workspace = true
