[package]
name = "example-grpc-routeguide"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-stream = "0.3.3"
futures-util = "0.3.21"
poem = { path = "../../../poem" }
poem-grpc = { path = "../../../poem-grpc" }
prost = "0.11.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[build-dependencies]
poem-grpc-build = { path = "../../../poem-grpc-build" }
