[package]
name = "example-grpc-routeguide"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-stream = "0.3.3"
futures-util.workspace = true
poem.workspace = true
poem-grpc.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true

[build-dependencies]
poem-grpc-build.workspace = true
