[package]
name = "example-grpc-routeguide"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3.3"
futures-util.workspace = true
poem = { path = "../../../poem" }
poem-grpc = { path = "../../../poem-grpc" }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true

[build-dependencies]
poem-grpc-build = { path = "../../../poem-grpc-build" }
