[package]
name = "counter-sse"
version = "0.1.0"
edition = "2021"

[dependencies]
poem-mcpserver = { workspace = true, features = ["sse"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "0.8.22"
poem = { version = "3.1.7", features = ["sse"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
