[package]
name = "counter-streamable-http"
version = "0.1.0"
edition = "2021"

[dependencies]
poem-mcpserver = { workspace = true, features = ["streamable-http"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "1.0"
poem = { workspace = true, features = ["sse"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber.workspace = true
