[package]
name = "counter-streamable-http"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
poem-mcpserver = { workspace = true, features = ["streamable-http"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "1.0"
poem = { workspace = true, features = ["sse"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber.workspace = true
