[package]
name = "prompts-streamable-http"
version.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "prompts-streamable-http"

[[bin]]
name = "prompts-streamable-http-client"
path = "src/client.rs"

[dependencies]
anyhow = "1"
poem-mcpserver = { workspace = true, features = ["streamable-http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
schemars = "1.0"
poem = { workspace = true, features = ["sse"] }
rmcp = { version = "0.13", features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber.workspace = true
