[package]
name = "prompts-example"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
poem-mcpserver.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
schemars = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
